[tool.poetry]
name = "pyexcel-export"
version = "0.1.0"
description = "Preserve good formatting when exporting to *.xlsx, *.ods, *.json and when updating data."
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/patarapolw/pyexcel-export"
homepage = "https://github.com/patarapolw/pyexcel-export"

[tool.poetry.dependencies]
python = ">=3"
pyexcel = "^0.5.8"
pyexcel-xlsx = "^0.5.6"
openpyxl = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
