[tool.poetry]
name = "pyexcel-export"
version = "0.3.6"
description = "Keep good formatting when exporting to *.xlsx, *.yaml and *.json and when updating data."
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/patarapolw/pyexcel-export"
homepage = "https://github.com/patarapolw/pyexcel-export"
keywords = ["excel", "openpyxl", "pyexcel", "yaml"]

[tool.poetry.dependencies]
python = ">=3.5"
pyexcel = "^0.5.8"
openpyxl = "<2.6.0,>=2.5.0"
oyaml = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
send2trash = "^1.5"
pyexcel-xlsx = "^0.5.7"
